--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -2,14 +2,14 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Fragments</title>
 </head>
 <body>
 <header th:fragment="header" id="banner">
-    <a href="./"><img src="/images/logomark-big-star-white.svg" width="43" height="50" alt="Big Star Collectibles"></a>
+    <a th:href="@{/home}"><img src="/images/logomark-big-star-white.svg" width="43" height="50" alt="Big Star Collectibles"></a>
     <nav aria-label="Site">
         <ul>
-            <li><a href="./" aria-current="page">Home</a></li>
+            <li><a th:href="@{/home}" aria-current="page">Home</a></li>
             <li>
                 <a href="Product-List.html">Products</a>
             </li>
