--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -14,7 +14,7 @@
                 <a href="Product-List.html">Products</a>
             </li>
             <li>
-                <a href="Static-About.html">About</a>
+                <a th:href="@{/about}">About</a>
             </li>
             <li><a href="Contact-Us.html">Contact</a></li>
         </ul>
@@ -40,9 +40,9 @@
 <footer th:fragment="footer" id="continfo">
     <nav aria-label="Supplementary">
         <ul>
-            <li><a href="./">Home</a></li>
+            <li><a th:href="@{/home}">Home</a></li>
             <li><a href="Product-List.html">Products</a></li>
-            <li><a href="Static-About.html">About</a></li>
+            <li><a th:href="@{/about}">About</a></li>
             <li><a href="Contact-Us.html">Contact</a></li>
         </ul>
     </nav>
