--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -11,7 +11,7 @@
         <ul>
             <li><a th:href="@{/home}" aria-current="page">Home</a></li>
             <li>
-                <a href="Product-List.html">Products</a>
+                <a th:href="@{/getAllProducts}">Products</a>
             </li>
             <li>
                 <a th:href="@{/about}">About</a>
@@ -41,7 +41,7 @@
     <nav aria-label="Supplementary">
         <ul>
             <li><a th:href="@{/home}">Home</a></li>
-            <li><a href="Product-List.html">Products</a></li>
+            <li><a th:href="@{/getAllProducts}">Products</a></li>
             <li><a th:href="@{/about}">About</a></li>
             <li><a href="Contact-Us.html">Contact</a></li>
         </ul>
