--- a/src/main/resources/templates/not-found.html
+++ b/src/main/resources/templates/not-found.html
@@ -38,7 +38,7 @@
 <style>
     p {
         color: red;;
-        font-size:x-large;
+        font-size: x-large;
         text-align: center;
     }
 </style>
@@ -55,7 +55,7 @@
 <main id="main">
 
     <br><br><br><br><br>
-    <p>Something went wrong, try again later!!</p>
+    <p>Sorry, we couldn't find what you're looking for!</p>
     <br><br><br><br><br>
 </main>
 
