--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -16,7 +16,7 @@
             <li>
                 <a th:href="@{/about}">About</a>
             </li>
-            <li><a href="Contact-Us.html">Contact</a></li>
+            <li><a th:href="@{/contact-us}">Contact</a></li>
         </ul>
         <button type="button"><img src="/images/icon-menu.svg" width="30" height="24" alt="Site Navigation Panel"></button>
     </nav>
@@ -43,7 +43,7 @@
             <li><a th:href="@{/home}">Home</a></li>
             <li><a th:href="@{/getAllProducts}">Products</a></li>
             <li><a th:href="@{/about}">About</a></li>
-            <li><a href="Contact-Us.html">Contact</a></li>
+            <li><a th:href="@{/contact-us}">Contact</a></li>
         </ul>
     </nav>
     <figure>
